# excel-ai-tools

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  opencode.json  pyproject.toml
.claude/skills/spreadsheet-tools/: SKILL.md  reference.md
.cursor/: mcp.json
.cursor/skills/spreadsheet-tools/: SKILL.md  reference.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.opencode/skills/spreadsheet-tools/: SKILL.md  reference.md
src/spreadsheet_tools/: __init__.py  cleaner.py  cli.py  mcp_server.py  reader.py  rules.py  snapshot.py  styles.py  utils.py  writer.py
tests/: test_cleaner.py  test_rules.py  test_utils.py  test_writer_new.py
